# onecut

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  install.sh  onecut.spec  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: build.py
src/onecut/: __init__.py  __main__.py  caption_file.py  captions.py  cli.py  comments.py  config.py  errors.py  images.py  media.py  overlays.py  process.py  render.py  rendering.py  sources.py
src/onecut/commands/: __init__.py  captions.py  render.py  trim.py
tests/: smoke-test.sh  test_caption_file.py  test_captions.py  test_cli.py  test_comments.py  test_config.py  test_sources.py
tests/commands/: test_trim.py
