[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onecut"
dynamic = ["version"]
description = "Turn a folder of video clips into one finished video"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Lucas Scariot" }]
dependencies = ["Pillow>=11.0"]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
test = ["pytest>=8.0"]

[project.scripts]
onecut = "onecut.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/onecut"]

[tool.hatch.version]
path = "src/onecut/__init__.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
